[package]
name = "ld19-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-serial = "5.4.4"
futures = "0.3.30"
eframe = "0.28.1"
egui_plot = "0.28.1"
byteorder = "1.5.0"
